--- a/newsletter.html
+++ b/newsletter.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-saY5Q8IhpM mbr-fullscreen mbr-parallax-background" id="header2-4w">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-saY5Q8IhpM mbr-fullscreen mbr-parallax-background" id="header2-4w">
 
     
 
@@ -232,8 +232,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
