--- a/privacy.html
+++ b/privacy.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section article content10 cid-rRxsRNQhQJ" id="content10-12">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-section article content10 cid-rRxsRNQhQJ" id="content10-12">
     
      
 
@@ -278,8 +278,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
