--- a/whatsnew.html
+++ b/whatsnew.html
@@ -41,7 +41,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
+<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section once="footers" class="cid-rRxsbIgNmG" id="footer7-1k">
 
     
 
@@ -170,8 +170,8 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   
 </body>
 </html>
