--- a/chartm.html
+++ b/chartm.html
@@ -18,7 +18,8 @@
         ['Estimated views (JUL, 2020)',        1305, 840, 117, 1, 4, 146,0],
         ['Estimated views (AUG, 2020)',        1133, 1098, 73, 0, 9, 223,0],
         ['Estimated views (SEP, 2020)',        442, 1065, 61, 0, 0, 510, 25],
-        ['Estimated views (OCT, 2020)',        919, 810, 67, 0, 0, 622, 114]
+        ['Estimated views (OCT, 2020)',        919, 810, 67, 0, 0, 622, 114],
+        ['Estimated views (NOV, 2020)',        57, 182, 8, 0, 9, 246, 26]
       ]);
 
       var options = {
