--- a/page12.html
+++ b/page12.html
@@ -105,7 +105,7 @@
             <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">BCS Marketing</h1>
             
             
-            <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="signup-marketing.html">Purchase and ad</a> <a class="btn btn-md btn-info display-4" href="account.html">Accounts</a></div>
+            <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="signup-marketing.html">Purchase an ad</a> <a class="btn btn-md btn-info display-4" href="account.html">Accounts</a></div>
         </div>
     </div>
 
