--- a/page12.html
+++ b/page12.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:image:src" content="assets/images/page12-meta.png">
-  <meta property="og:image" content="assets/images/page12-meta.png">
+  <meta name="twitter:image:src" content="assets/images/page12-meta.jpg">
+  <meta property="og:image" content="assets/images/page12-meta.jpg">
   <meta name="twitter:title" content="Marketing">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/bcs-logo-1.png" type="image/x-icon">
