--- a/bct/mk3-bar-1.html
+++ b/bct/mk3-bar-1.html
@@ -4,7 +4,7 @@
 
     <!--BCS Ads MK2-->
     <title>general/entertainment/media</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
     <script async src="https://cdn.panelbear.com/analytics.js?site=CDdhQeiLyps"></script>
@@ -16,26 +16,32 @@
   <body>
 
     <div class="gallery" style="width: 45%;" height="auto">
-    <div class="card" style="width: 100%;" height="auto">
-        <img src="wdm.png" class="card-img-top" alt="Wave Digital Ministries Network">
-        <div class="card-body">
-          <h5 class="card-title">Wave Digital Ministries</h5>
-          <p class="card-text">We are merging ministry & technology.</p>
-          <a href="https://kutt.it/wXTmup" class="card-link">Learn more</a><a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="card-link">Report ad</a>
-        </div>
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <img src="wdm.png" alt="Wave Digital Ministries Network">
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
+            <p>We are merging ministry & technology.</p>
+            <a href="https://kutt.it/wXTmup" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
+
+          </div>
+      </div>
+    </div>
+    <div class="gallery" style="width: 45%;" height="auto">
+      <div class="uk-card uk-card-default" width="100%">
+          <div class="uk-card-media-top">
+              <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog">
+          </div>
+          <div class="uk-card-body">
+            <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
+            <p>Let's chat about current issues over coffee.</p>
+            <a href="https://kutt.it/cMt0dj" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
+
+          </div>
       </div>
     </div>
 
-<div class="gallery" style="width: 45%;" height="auto">
-<div class="card" style="width: 100%;" height="auto">
-    <img src="https://www.borgcreative.com/bct/cwjad.jpg" class="card-img-top" alt="CoffeeWithJake Blog">
-    <div class="card-body">
-      <h5 class="card-title">CoffeeWithJake</h5>
-      <p class="card-text">Let's chat about current issues over coffee.</p>
-      <a href="https://kutt.it/cMt0dj" class="card-link">Learn more</a><a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="card-link">Report ad</a>
-    </div>
-  </div>
-</div>
 
 <style>
 div.gallery {
