--- a/bct/mk3-bar-1.html
+++ b/bct/mk3-bar-1.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" style="background-color:transparent;">
   <head>
-    <!--JazzBlocks Divided required code-->
-    <link rel="stylesheet" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/libraries/textStyles.css">
-    <link rel="stylesheet" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/libraries/buttons.css">
-    <link rel="stylesheet" href="https://dev.jacobborgprogramming.net/JazzBlocksLibrary/libraries/everythingelse.css">
-    <link rel="preload" href="https://dev.jacobborgprogramming.net/libraries/JazzBlocksFunctions.js" as="script">
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Chilanka|La+Belle+Aurore|Literata|Oswald|Ubuntu&display=swap" as="style">
-    <link href="https://fonts.googleapis.com/css?family=Chilanka|La+Belle+Aurore|Literata|Oswald|Ubuntu&display=swap" rel="stylesheet">
-    <!--end-->
+
     <!--BCS Ads MK2-->
     <title>general/entertainment/media</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
     <meta charset="utf-8">
     <!-- Panelbear Analytics - We respect your privacy -->
     <script async src="https://cdn.panelbear.com/analytics.js?site=CDdhQeiLyps"></script>
@@ -27,9 +21,9 @@
               <img src="wdm.png" alt="Wave Digital Ministries Network">
           </div>
           <div class="uk-card-body">
-            <h5 class="pc_m" style="margin-left: 2mm;"><span>Wave Digital Ministries</span></h5>
-            <p class="pc_s" style="margin-left: 2mm;">We are merging ministry & technology.</p>
-            <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted"><button class="buttonCC">Learn more</button></a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted"><button class="buttonCC">Report ad</button></a>
+            <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
+            <p>We are merging ministry & technology.</p>
+            <a href="https://kutt.it/wXTmup" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
@@ -40,9 +34,10 @@
               <img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog">
           </div>
           <div class="uk-card-body">
-            <h5 class="pc_m" style="margin-left: 2mm;"><span>CoffeeWithJake</span></h5>
-            <p class="pc_s" style="margin-left: 2mm;">Let's chat about current issues over coffee.</p>
-            <a href="https://kutt.it/cMt0dj" target="_blank" class="uk-link-muted"><button class="buttonCC">Learn more</button></a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted"><button class="buttonCC">Report ad</button></a>
+            <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
+            <p>Let's chat about current issues over coffee.</p>
+            <a href="https://kutt.it/cMt0dj" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
+
           </div>
       </div>
     </div>
