--- a/bct/mk3-bar-1.html
+++ b/bct/mk3-bar-1.html
@@ -23,7 +23,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
             <p>We are merging ministry & technology.</p>
-            <a href="https://kutt.it/wXTmup" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
+            <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
@@ -36,7 +36,7 @@
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
             <p>Let's chat about current issues over coffee.</p>
-            <a href="https://kutt.it/cMt0dj" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" class="uk-link-muted">Report ad</a>
+            <a href="https://kutt.it/cMt0dj" target="_blank" class="uk-link-muted">Learn more</a> <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
