--- a/whatsnew.html
+++ b/whatsnew.html
@@ -127,11 +127,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html" aria-expanded="false">
                         HOME</a></li>
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-info display-4" href="#" aria-expanded="true" data-toggle="dropdown-submenu">DIGITAL PRODUCTS</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item text-info display-4" href="https://gamejolt.com/games/grocerycatcher/523501" aria-expanded="false" target="_blank">Grocery Catcher</a>
                         <a class="dropdown-item text-info display-4" href="fruity.html" aria-expanded="false">Fruity</a>
-                        <a class="dropdown-item text-info display-4" href="page12.html" aria-expanded="false">Marketing</a>
+                        <a class="dropdown-item text-info display-4" href="page12.html" aria-expanded="false">Marketing</a><a class="dropdown-item text-info text-primary display-4" href="https://search.borgcreative.com" aria-expanded="false" target="_blank">Search (Beta)</a>
                     </div>
                 </li>
 
