--- a/bct/mk2-bar-2.html
+++ b/bct/mk2-bar-2.html
@@ -18,12 +18,12 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted"><img src="./img/marketingad2.jpg" alt="Wave Digital Ministries Network"></a>
+              <a href="https://data.borgcreative.com/dataproject002.html" target="_blank" class="uk-link-muted"><img src="./img/bcssurvey.png" alt="BCS Data research survey"></a>
           </div>
           <div class="uk-card-body">
-            <h5 class="uk-heading-line"><span>BCS Marketing</span></h5>
-            <p>Buy an ad today!</p>
-            <a href="https://www.borgcreative.com/page12.html" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
+            <h5 class="uk-heading-line"><span>BCS Data Survey</span></h5>
+            <p>Do you think that "Open Data" projects are a good idea?</p>
+            <a href="https://data.borgcreative.com/dataproject002.html" target="_blank" class="uk-link-muted">Take survey</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
