--- a/chartm.html
+++ b/chartm.html
@@ -19,7 +19,8 @@
         ['Estimated views (AUG, 2020)',        1133, 1098, 73, 0, 9, 223,0],
         ['Estimated views (SEP, 2020)',        442, 1065, 61, 0, 0, 510, 25],
         ['Estimated views (OCT, 2020)',        919, 810, 67, 0, 0, 622, 114],
-        ['Estimated views (NOV, 2020)',        619, 768, 122, 0, 29, 1026, 182]
+        ['Estimated views (NOV, 2020)',        619, 768, 122, 0, 29, 1026, 182],
+        ['Estimated views (DEC, 2020)',        600, 210, 33, 0, 1, 272, 47]
       ]);
 
       var options = {
