--- a/bct/mk2-bar-1.html
+++ b/bct/mk2-bar-1.html
@@ -18,12 +18,12 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted"><img src="wdm.png" alt="Wave Digital Ministries Network"></a>
+              <a href="https://www.wavedm.net/" target="_blank" class="uk-link-muted"><img src="wdm.png" alt="Wave Digital Ministries Network"></a>
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Wave Digital Ministries</span></h5>
             <p>We are merging ministry & technology.</p>
-            <a href="https://kutt.it/wXTmup" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://www.wavedm.net/" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
@@ -31,12 +31,12 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted"><img src="grocerycatcher1.png" alt="CoffeeWithJake Blog"></a>
+              <a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank" class="uk-link-muted"><img src="grocerycatcher1.png" alt="CoffeeWithJake Blog"></a>
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>Grocery Catcher</span></h5>
             <p>Catch the food with your cart and avoid the rapidly approaching boulders!</p>
-            <a href="https://kutt.it/AvTyTk" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
