--- a/bct/mk2-bar-4.html
+++ b/bct/mk2-bar-4.html
@@ -30,12 +30,12 @@
     <div class="gallery" style="width: 45%;" height="auto">
       <div class="uk-card uk-card-default" width="100%">
           <div class="uk-card-media-top">
-              <a href="https://kutt.it/cMt0dj" target="_blank" class="uk-link-muted"><img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog"></a>
+              <a href="https://www.coffeewithjake.com/" target="_blank" class="uk-link-muted"><img src="https://www.borgcreative.com/bct/cwjad.jpg" alt="CoffeeWithJake Blog"></a>
           </div>
           <div class="uk-card-body">
             <h5 class="uk-heading-line"><span>CoffeeWithJake</span></h5>
             <p>Let's chat about current issues over coffee.</p>
-            <a href="https://kutt.it/cMt0dj" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
+            <a href="https://www.coffeewithjake.com/" target="_blank" class="uk-link-muted">Learn more</a> | <a href="https://airtable.com/shrTOFcTQs3yaDYJv" target="_blank" class="uk-link-muted">Report ad</a>
 
           </div>
       </div>
