--- a/card/bcs1.html
+++ b/card/bcs1.html
@@ -1,110 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
-  <link rel="shortcut icon" href="https://www.borgcreative.com/img/bcs.png">
-  <meta name="robots" content="noindex">
-
-
-  <!-- Compressed CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css" integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-
-<!-- Compressed JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-
-<!-- UIkit CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/css/uikit.min.css" />
-
-<!-- UIkit JS -->
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/js/uikit.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/uikit@3.6.1/dist/js/uikit-icons.min.js"></script>
-
-
-<meta property="og:title" content="Borg Creative Studios, LLC">
-<meta property="og:description" content="">
-<meta property="og:image" content="https://www.borgcreative.com/img/code.jpg">
-<meta property="og:url" content="https://www.borgcreative.com/card/bcs1.html">
-
-<meta property="twitter:title" content="Borg Creative Studios, LLC">
-<meta property="twitter:description" content="">
-<meta property="twitter:image" content="https://www.borgcreative.com/img/code.jpg">
-<meta property="twitter:url" content="https://www.borgcreative.com/card/bcs1.html">
-
-
-  <meta charset="utf-8">
-  <title>Borg Creative Studios, LLC</title>
-</head>
-<header>
-<!--  <div class="uk-inline" style="position: fixed; top: 0px; left: 0px;">
-      <a href="./index.html"><button class="uk-button uk-button-secondary" type="button">Home</button></a>
-
-      <button class="uk-button uk-button-secondary" type="button" >Menu</button>
-      <div uk-dropdown="mode: click">
-        <p><a href=""><button class="uk-button uk-button-text">Digital Products</button></a></p>
-        <div uk-dropdown="mode: click">
-          <p><a href="./page12.html" ><button class="uk-button uk-button-text">Marketing</button></a></p>
-          <p><a href="./fruity.html" ><button class="uk-button uk-button-text">Fruity</button></a></p>
-          <p><a href="https://gamejolt.com/games/grocerycatcher/523501" target="_blank"><button class="uk-button uk-button-text">Grocery Catcher</button></a></p>
-          <p><a href="https://search.borgcreative.com/" target="_blank"><button class="uk-button uk-button-text">Search (Beta)</button></a></p>
-        </div>
-        <p><a href=""><button class="uk-button uk-button-text">Media</button></a></p>
-        <div uk-dropdown="mode: click">
-          <p><a href="./animation.html" ><button class="uk-button uk-button-text">Animation</button></a></p>
-          <p><a href="./video.html" ><button class="uk-button uk-button-text">Video</button></a></p>
-          <p><a href="./interactive.html" ><button class="uk-button uk-button-text">Interactive</button></a></p>
-        </div>
-        <p><a href="https://teespring.com/stores/borgcreative" target="_blank"><button class="uk-button uk-button-text">Shop</button></a></p>
-        <p><a href="./privacy.html" ><button class="uk-button uk-button-text">Privacy</button></a></p>
-        <p><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"> <img src="./img/facebook.svg" width="40px" alt=""> </a><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"> <img src="./img/instagram.svg" width="40px" alt=""> </a><a href="https://twitter.com/borgcreative" target="_blank"> <img src="./img/twitter.svg" width="40px" alt=""> </a></p>
-
-
-      </div>
-
-  </div>-->
-
-
-</header>
-
-
-  <body>
-    <div uk-parallax="bgy: 0" name="header" class=" uk-height-viewport uk-background-cover uk-light uk-flex" style="background-image: url('https://www.borgcreative.com/img/bcs-cover.jpg'); padding-top:10mm">
-
-        <div class="uk-align-center  uk-text-center uk-margin-auto uk-margin-auto-vertical">
-          <center class="uk-align-center">
-            <img src="https://www.borgcreative.com/img/bcs.png" width="150mm" alt="Borg Creative Studios logo">
-          <!--<p><a class="uk-button uk-button-secondary" href="https://borgcreative.substack.com/">News letter</a></p>-->
-          <h1 style="color: white; text-shadow: 0px 0px 0px #fff;">The future of media.</h1>
-          <div class="uk-card uk-card-default uk-width-1-2@m">
-    <div class="uk-card-header">
-        <div class="uk-grid-small uk-flex-middle" uk-grid>
-
-            <div class="uk-width-expand">
-                <h3 class="uk-card-title uk-margin-remove-bottom">Borg Creative Studios</h3>
-
-            </div>
-        </div>
-    </div>
-    <div class="uk-card-body">
-      <p>Borg Creative Studios is the place to find innovative entertainment and privacy-oriented business resources.</p>
-      <!--<p style="color:black" class="uk-text-meta">Email: Tifany.George@kw.com</p>-->
-      <p><a style="color:black" href="https://www.borgcreative.com">Website</a></p>
-      <p><a style="color:black" href="https://www.borgcreative.com/card/vcard/bcs.vcf" target="_blank">Download Contact</a></p>
-
-    <!--  <p><a style="color:black" href="https://www.borgcreative.com/card/vcard/" target="_blank">Download Contact</a></p>-->
-      </div>
-    <div class="uk-card-footer">
-      <p> <a href="https://www.facebook.com/borgcreativestudios" target="_blank"><img src="./icons/facebook.svg" alt="Facebook link"></a> <a href="https://twitter.com/borgcreative" target="_blank"><img src="./icons/twitter.svg" alt="Twitter link"></a> <a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><img src="./icons/instagram.svg" alt="Instagram link"></a></p>
-
-    </div>
-</div>
-        </center>
-        </div>
-
-    </div>
-    <a id = "next1"></a>
-
-
-
-
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>BCS Card</title><meta name="description" content="BCS Card"><meta name="twitter:card" content=""><meta name="twitter:title" content="Jacob Borg"><meta name="twitter:image" content="https://www.borgcreative.com/card/jacobborg/assets/img/jb-icon.jpg"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="icon" type="image/png" sizes="1080x1080" href="assets/img/bcs.png"><link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"><link rel="manifest" href="manifest.json"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&amp;subset=latin-ext"><link rel="stylesheet" href="assets/fonts/ionicons.min.css"><link rel="stylesheet" href="assets/css/styles.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"></head><body style="background: url(&quot;assets/img/bcs-cover.jpg&quot;) center / cover no-repeat;"><img class="img-fluid d-flex d-md-flex justify-content-md-center align-items-md-center" src="assets/img/bcs.png" style="width: 125px;text-align: center;padding: 15px;"><div class="container text-center" style="background: #fff;padding: 10px;"><h1 style="padding: 5px;">Borg Creative Studios</h1><p>Borg Creative Studios is the place to find innovative entertainment and privacy-oriented business resources.</p><p><a class="btn btn-primary" role="button" data-bss-hover-animate="rubberBand" style="background: var(--bs-dark);border-style: none;" href="https://www.borgcreative.com/">Website</a></p><p><a class="btn btn-primary" role="button" data-bss-hover-animate="rubberBand" style="background: var(--bs-dark);border-style: none;" href="https://www.borgcreative.com/card/vcard/bcs.vcf">Download Contact</a></p><div class="social-icons" style="padding: 25px;"><a href="https://twitter.com/borgcreative"><i class="icon ion-social-twitter" data-bss-hover-animate="rubberBand" style="color: #00DFD1;border-color: #00DFD1;"></i></a><a href="https://www.facebook.com/borgcreativestudios/"><i class="icon ion-social-facebook" data-bss-hover-animate="rubberBand" style="border-color: #00DFD1;color: #00DFD1;"></i></a><a href="https://www.instagram.com/borgcreativestudios/"><i class="icon ion-social-instagram" data-bss-hover-animate="rubberBand" style="color: #00DFD1;border-color: #00DFD1;"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1"><i class="icon ion-social-whatsapp" data-bss-hover-animate="rubberBand" style="border-color: #00DFD1;color: #00DFD1;"></i></a><a href="https://github.com/Borg-Creative-Studios"><i class="icon ion-social-github" data-bss-hover-animate="rubberBand" style="border-color: #00DFD1;color: #00DFD1;"></i></a></div></div><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
